src/test/ui/borrowck/borrowck-if-with-else.stderr
error[E0381]: binding `x` isn't initialized in all conditions
  --> $DIR/borrowck-if-with-else.rs:10:9
   |
LL |     let x: isize;
   |         - variable declared here
LL |     if 1 > 2 {
   |        ----- `x` is uninitialized if this condition is met
...
LL |     foo(x);
   |         ^ `x` used here but it isn't initialized in all conditions

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
